make sure expanded images fill window on mobile layout

--- a/src/components/product-options/mobile-style.sass
+++ b/src/components/product-options/mobile-style.sass
@@ -10,6 +10,7 @@
   background: $actually-white
   display: flex
   flex-direction: column
+  will-change: auto
 
 .left // (actually top in mobile layout)
   flex-grow: 1
